Return default images on default when url is not found
